--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa-solid fa-globe"></i></span>
-                        <span class="text"><a href="https://worick3.github.io/myPortfolio/">My Portfolio</a></span>
+                        <span class="text"><a href="https://worick3.github.io/My_Portfolio2/">My Portfolio</a></span>
                     </li>
                     
                     <li>
