--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <li>
                         <h5>2019-2020</h5>
                         <h4>Computer Science</h4>
-                        <h4>Udemy</h4>
+                        <h4>Universidad Autonoma del Estado de Mexico (UAEM)</h4>
                     </li>
                     <li>
                         <h5>2020 - 2021</h5>
