--- a/index.html
+++ b/index.html
@@ -110,43 +110,43 @@
             <div class="about skills">
                 <h2 class="tittle2">Professional Skils</h2>
                 <div class="box">
-                    <h4>HTML</h4>
+                    <h4>HTML 90%</h4>
                     <div class="percent">
                         <div style="width: 90%;"></div>
                     </div>
                 </div>
                 <div class="box">
-                    <h4>Css</h4>
+                    <h4>Css 90%</h4>
                     <div class="percent">
                         <div style="width: 90%;"></div>
                     </div>
                 </div>
                 <div class="box">
-                    <h4>Javascript</h4>
+                    <h4>Javascript 85%</h4>
                     <div class="percent">
                         <div style="width: 80%;"></div>
                     </div>
                 </div>
                 <div class="box">
-                    <h4>React.Js</h4>
+                    <h4>React.Js 60%</h4>
                     <div class="percent">
                         <div style="width: 50%;"></div>
                     </div>
                 </div>
                 <div class="box">
-                    <h4>Python</h4>
+                    <h4>Python 85%</h4>
                     <div class="percent">
                         <div style="width: 80%;"></div>
                     </div>
                 </div>
                 <div class="box">
-                    <h4>Git, Github</h4>
+                    <h4>Git, Github 90%</h4>
                     <div class="percent">
                         <div style="width: 80%;"></div>
                     </div>
                 </div>
                 <div class="box">
-                    <h4>Linux</h4>
+                    <h4>Linux 60%</h4>
                     <div class="percent">
                         <div style="width: 60%;"></div>
                     </div>
