--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
             </div>
             <div class="about skills">
-                <h2 class="tittle2">Professional Skils</h2>
+                <h2 class="tittle2">Professional Skills</h2>
                 <div class="box">
                     <h4>HTML 90%</h4>
                     <div class="percent">
